# telcoin-network

./: .dockerignore  .env.example  .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  MULTI_WORKER_STACK_PLAN.md  Makefile  NOTICE  PLAN.md  README.md  SECURITY.md  SYNC.md  basefee.md  claude-session.md  cliff.toml  clippy.toml  comment.md  delete-me-1  delete-me-2  delete-me-certifier-error-shutdown  delete-me-logs  delete-me-timeout1  delete-me-timeout2  delete-me-timeout3  diagnosis.md  epoch-test-failure.txt  fable-scan.md  issue.md  issue0.md  issue1.md  issue2.md  issue3.md  issue4.md  issue5.md  memory-audit-report.md  plan.md  proptest.toml  report-scan.md  report.md  (+6 more)
crates/config/: Cargo.toml  README.md
crates/config/src/: consensus.rs  consensus_config.rs  genesis.rs  keys.rs  lib.rs  network.rs  node.rs  traits.rs
crates/consensus/consensus-metrics/: Cargo.toml
crates/consensus/consensus-metrics/src/: histogram.rs  lib.rs  metered_channel.rs  prometheus_closure.rs
crates/consensus/epoch-manager/: Cargo.toml
crates/consensus/epoch-manager/src/: lib.rs  manager.rs
crates/consensus/primary-metrics/: Cargo.toml
crates/consensus/primary-metrics/src/: lib.rs  metrics.rs
crates/consensus/worker/: Cargo.toml
crates/consensus/worker/src/: batch_fetcher.rs  batch_provider.rs  block_fetcher.rs  block_provider.rs  handlers.rs  lib.rs  metrics.rs  network.rs  quorum_waiter.rs  test_utils.rs  worker.rs
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/it/: basefee.rs  basefees.rs  common.rs  eject.rs  epochs.rs  exex.rs  faucet.rs  genesis_tests.rs  main.rs  metrics.rs  restarts.rs  snapshots.rs  staking.rs  startup.rs  sync.rs
crates/engine/: Cargo.toml
crates/engine/src/: error.rs  lib.rs  metrics.rs  payload_builder.rs
crates/engine/tests/it/: main.rs
crates/execution/block-builder/: Cargo.toml
crates/execution/block-builder/src/: block.rs  block_builder.rs  error.rs  lib.rs  task.rs  test_utils.rs
crates/execution/state-sync/: Cargo.toml
crates/execution/state-sync/src/: lib.rs  primary.rs  rpc_ext.rs
crates/execution/tn-rpc/: Cargo.toml
crates/execution/tn-rpc/src/: error.rs  handshake.rs  lib.rs  rpc_ext.rs
crates/exex/: Cargo.toml
crates/exex/src/: context.rs  event.rs  lib.rs  manager.rs  notification.rs  replay.rs
crates/network-libp2p/: Cargo.toml  README.md
crates/network-libp2p/src/: README.md  codec.rs  consensus.rs  error.rs  generic.rs  globals.rs  gossip.rs  helpers.rs  kad.rs  lib.rs  metrics.rs  publish.rs  subscribe.rs  types.rs  worker.rs
crates/network-libp2p/src/messages/: inner.rs  mod.rs  primary.rs  worker.rs
crates/network-libp2p/src/peers/: all_peers.rs  banned.rs  behavior.rs  cache.rs  info.rs  invariants.md  manager.rs  mod.rs  peer.rs  penalty.md  score.rs  status.rs  types.rs
crates/network-libp2p/src/rpc/: codec.rs  mod.rs  procedures.rs  request.rs  response.rs
crates/network-libp2p/src/stream/: behavior.rs  codec.rs  handler.rs  manager.rs  mod.rs  protocol.rs  upgrade.rs
crates/network-libp2p/src/sync/: frame.rs  mod.rs  request.rs
crates/network-libp2p/src/tests/: all_peers.rs  banned_peers.rs  cache_peers.rs  codec_tests.rs  common.rs  network_tests.rs  peer_manager.rs  peers.rs  tn_codec_tests.rs  types.rs
crates/node/: Cargo.toml
crates/node/src/: dirs.rs  engine_to_primary_rpc.rs  epoch_vote_collector.rs  epoch_votes.rs  error.rs  health.rs  lib.rs  manager.rs  metrics.rs  primary.rs  worker.rs
crates/node/src/engine/: builder.rs  inner.rs  mod.rs  network.rs  worker.rs
crates/node/src/manager/: epoch_votes.rs  exex.rs  export_exec.rs  mod.rs  node.rs
crates/node/src/network/: engine.rs  local.rs  mod.rs  primary.rs  worker.rs
crates/node/tests/it/: main.rs
crates/snapshot/: Cargo.toml
crates/snapshot/src/: export.rs  lib.rs  manifest.rs  metrics.rs  restore.rs  service.rs  store.rs  verify.rs
crates/snapshot/tests/: manifest_proptest.rs  verify_proptest.rs
crates/state-sync/: Cargo.toml
crates/state-sync/src/: consensus.rs  epoch.rs  lib.rs  metrics.rs
crates/state-sync/tests/it/: main.rs
crates/storage/: Cargo.toml
crates/storage/src/: certificate_pack.rs  composite_db.rs  consensus.rs  consensus_pack.rs  epoch_records.rs  exec_state_pack.rs  layered_db.rs  lib.rs  mem_db.rs  pack_validate.rs  traits.rs
crates/storage/src/archive/: crc.rs  data_file.rs  fxhasher.rs  index.rs  mod.rs  pack.rs  pack_iter.rs
crates/storage/src/mdbx/: database.rs  metrics.rs  mod.rs
crates/storage/src/redb/: database.rs  mod.rs
crates/storage/src/rocks/: database.rs  mod.rs
crates/storage/src/stores/: certificate_store.rs  mod.rs  (+6 more)
crates/telcoin-network-cli/: Cargo.toml  README.md  build.rs
crates/telcoin-network-cli/src/: cli.rs  db.rs  lib.rs  node.rs  open_telemetry.rs  passphrase.rs  snapshot.rs
crates/test-utils/: Cargo.toml
crates/test-utils-committee/: Cargo.toml
crates/test-utils-committee/src/: authority.rs  builder.rs  committee.rs  lib.rs  worker.rs
crates/test-utils/benches/: batch_digest.rs
crates/test-utils/src/: authority.rs  builder.rs  cluster.rs  committee.rs  consensus.rs  execution.rs  helpers.rs  lib.rs  primary.rs  temp_dirs.rs  tracing.rs  wait.rs  worker.rs
crates/tn-evm/: Cargo.toml
crates/tn-evm/src/: constants.rs  context.rs  evm.rs  factory.rs  handler.rs  hardfork.rs  lib.rs
crates/tn-exex/: CUSTOM_NODE.md  Cargo.toml  README.md
crates/tn-exex/src/: context.rs  event.rs  launcher.rs  lib.rs  manager.rs  notification.rs  replay.rs
crates/tn-metrics/: Cargo.toml  README.md
crates/tn-metrics/src/: lib.rs  recorder.rs  server.rs
crates/tn-precompiles/: Cargo.toml
crates/tn-precompiles/src/: burnable.rs  constants.rs  eip2612.rs  erc20.rs  faucet.rs  gas_penalty.rs  hardfork.rs  helpers.rs  lib.rs
examples/exex-indexer/: Cargo.toml
examples/exex-indexer/src/: lib.rs
examples/exex-lifecycle/: Cargo.toml
examples/exex-lifecycle/src/: lib.rs  main.rs
tests/e2e-tests/: Cargo.toml
tests/e2e-tests/src/: faucet.rs  genesis_tests.rs  lib.rs  restarts.rs  utils.rs
(+483 files in other folders)
