[workspace]
members = [
    # common
    "bin/telcoin-network",
    "crates/config",
    "crates/engine",
    "crates/node",
    "crates/storage",
    "crates/test-utils",
    "crates/test-utils-committee",
    "crates/tn-utils",
    "crates/types",
    "crates/network-types",
    "crates/network-libp2p",
    "crates/state-sync",
    "crates/tn-reth",
    "crates/e2e-tests",
    "crates/telcoin-network-cli",

    # consensus
    "crates/consensus/executor",
    "crates/consensus/primary",
    "crates/consensus/worker",

    # execution
    "crates/batch-builder",
    "crates/batch-validator",
    "crates/execution/faucet",
    "crates/execution/tn-rpc",
]

# Explicitly set the resolver to version 2, which is the default for packages with edition >= 2021
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
# Remember to update:
# - .clippy.toml
# - README.md
# - Dockerfile
rust-version = "1.91" # see note
license = "MIT OR Apache-2.0"
homepage = "https://telcoin.network"
repository = "https://github.com/telcoin/telcoin-network"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steve Stanfield <steve@telcoin.org>",
    "Markus Osterlund <markus@telcoin.org>",
    "Telcoin Association <devs@telcoin.org>",
]
description = "Telcoin Network protocol."
exclude = [".github/"]

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 } # includes unused_crate_dependencies

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
# misc
clap = "4"
eyre = "0.6"
futures = "0.3"
tokio = { version = "1.44", default-features = false }
tracing = "0.1.0"
tracing-subscriber = { version = "0.3.20", default-features = false }
metrics = "0.23.0"                                     # Needed for `metrics-macro` to resolve the crate using `::metrics` notation
serde_json = "1.0.94"
humantime-serde = "1.1"
fdlimit = "0.3.0"
snap = "1.1.1"
rayon = "1.7"

# crypto
secp256k1 = { version = "0.31", default-features = false, features = [
    "global-context",
    "rand",
    "recovery",
] }

rpassword = "7.4.0"

# execution
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-config = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm-config = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-network = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-network-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-discv4 = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }
reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", tag = "v1.8.2" }

# eth
alloy = { version = "1.0.37", features = ["full"] }
alloy-rlp = "0.3.10"
alloy-evm = { version = "0.21.0" }

tn-batch-validator = { path = "crates/batch-validator" }
tn-engine = { path = "crates/engine" }

# batch maker
tn-batch-builder = { path = "crates/batch-builder" }
futures-util = "0.3.25"
jsonrpsee = { version = "0.26.0" }
jsonrpsee-types = { version = "0.26.0" }
assert_matches = { version = "1.5.0" }

# common
tn-types = { path = "./crates/types" }
tn-reth = { path = "./crates/tn-reth" }
tn-node = { path = "./crates/node" }
tn-config = { path = "./crates/config" }
tn-network-libp2p = { path = "./crates/network-libp2p" }
tn-network-types = { path = "./crates/network-types" }
tn-rpc = { path = "./crates/execution/tn-rpc" }
state-sync = { path = "./crates/state-sync" }
tn-utils = { path = "./crates/tn-utils" }
telcoin-network-cli = { path = "./crates/telcoin-network-cli" }

# optional
tn-faucet = { path = "./crates/execution/faucet" }

# consensus
tn-executor = { path = "./crates/consensus/executor" }
tn-worker = { path = "./crates/consensus/worker" }
tn-storage = { path = "./crates/storage" }
tn-primary = { path = "./crates/consensus/primary" }
tn-test-utils = { path = "./crates/test-utils" }
tn-test-utils-committee = { path = "./crates/test-utils-committee" }

# misc
match_opt = "0.1.2"
serde = { version = "^1.0", features = ["derive", "rc"] }
serde_repr = "0.1"
rand = "0.9"
rand_chacha = "0.9"
thiserror = "1.0.50"
tempfile = "3.3.0"
bcs = "0.1.4"
bincode = "1.3.3"
proptest = "1.5.0"
proptest-derive = "0.4"
serde-reflection = "0.3.6"
indexmap = { version = "2.5.0", features = ["serde"] }
once_cell = "1.18.0"
prometheus = { version = "0.13.4", default-features = false }
tonic = { version = "0.13" }
async-trait = "0.1.61"
dashmap = "6.0.1"
parking_lot = "0.12.3"
scopeguard = "1.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
quinn-proto = "0.11.8"
derive_builder = "0.12.0"
roaring = "0.10.1"
serde_with = { version = "2.1.0", features = ["hex"] }
ouroboros = "0.17"
proc-macro2 = "1.0.47"
uint = "0.10"
cfg-if = "1.0.0"
lru = "0.10"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
serde_yaml = "0.8.26"
byteorder = "1.4.3"
rustversion = "1.0.9"
bytes = "1.4.0"
humantime = "2.1.0"
blst = "0.3.14"
hex = "0.4.3"
dirs-next = "2.0.0"
escargot = "0.5"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
const-str = "0.5.6"
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
opentelemetry-otlp = "0.31.0"
opentelemetry-stdout = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = "0.32"
# consensus metrics
axum = { version = "0.8.6", default-features = false }
# healthcheck
http = { version = "1.3.1" }
backoff = { version = "0.4.0", features = [
    "futures",
    "futures-core",
    "pin-project-lite",
    "tokio",
    "tokio_1",
] }

libp2p = { version = "0.56.0" }
bs58 = { version = "0.5.1" }
blake3 = { version = "1.8.2" }
