[package]
name = "tn-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
]

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
fastcrypto = { workspace = true }
narwhal-network = { workspace = true }
narwhal-typed-store = { workspace = true }
narwhal-storage = { workspace = true }
tn-types = { workspace = true }
eyre = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
alloy = { workspace = true }
reth-chainspec = { workspace = true }
reth-primitives = { workspace = true }
humantime-serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
