[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
exclude.workspace = true

[dependencies]
telcoin-network = { path = "../../bin/telcoin-network" }
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
tn-config = { workspace = true, features = ["test-utils"]}
tn-node = { workspace = true }
tn-types = { workspace = true, features = ["test-utils"] }
tracing = { workspace = true }
tn-faucet = { workspace = true, optional = true }

[dev-dependencies]
tn-reth = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
serde_json = { workspace = true }
rand_chacha = { workspace = true }
alloy = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }

# Used for integration testing.
ethereum-tx-sign = "6.1.3"
const-hex = "1.12.0"

# faucet-specific
gcloud-sdk = { version = "=0.24.6", default-features = false, features = [
    "google-cloud-kms-v1",
    "tls-webpki-roots",
] }
jsonrpsee = { workspace = true }
k256 = "0.13.3"
tonic = { workspace = true }
nix = { version = "0.29", features = ["signal"] }
cfg-if = { workspace = true }
futures = { workspace = true }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }

[features]
default = []
faucet = ["dep:tn-faucet", "telcoin-network/faucet"]

[lints]
workspace = true
