[package]
name = "tn-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
]

[dependencies]
futures = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
tn-types = { workspace = true }
tn-reth = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
eyre = { workspace = true, optional = true }
metrics = { workspace = true }
reth-metrics = { workspace = true }

[dev-dependencies]
metrics-util = { workspace = true }
tn-test-utils = { workspace = true }
tn-batch-builder = { workspace = true, features = ["test-utils"] }
tn-types = { workspace = true, features = ["test-utils"] }
tn-engine = { workspace = true, features = ["test-utils"] }
tempfile = { workspace = true }
tn-config = { workspace = true }
tn-reth = { workspace = true, features = ["test-utils"] }
tn-primary = { workspace = true, features = ["test-utils"] }
assert_matches = { workspace = true }

[features]
default = []
test-utils = ["dep:eyre"]
# Adiri testnet fork logic gated on `tn_types::forks` — pull in the constants.
adiri = ["tn-types/adiri"]

[lints]
workspace = true
