[package]
name = "tn-network-libp2p"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "request-response",
    "gossipsub",
    "tokio",
    "quic",
    "macros",
] }
tokio = { workspace = true, features = ["rt", "net", "sync", "macros", "time"] }
tn-types = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
fastcrypto = { workspace = true }
thiserror = { workspace = true }

# req/res requires async_trait
#
#
# TODO: remove this after ssz
#
bcs = { workspace = true }
#
# !!!~~~~~k
async-trait = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
snap = { workspace=true }
unsigned-varint = { workspace = true, features = ["codec"] }
tokio-util = { workspace = true, features = ["codec"] }
roaring = { workspace = true }

[dev-dependencies]
tn-test-utils = { workspace = true }

[lints]
workspace = true
