[package]
name = "tn-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }
tn-executor = { workspace = true }
tn-primary = { workspace = true }
tn-storage = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
tn-worker = { workspace = true }
tn-rpc = { workspace = true }
eyre = { workspace = true }
tn-network-libp2p = { workspace = true }
tn-reth = { workspace = true }
consensus-metrics = { workspace = true }
tn-primary-metrics = { workspace = true }
state-sync = { workspace = true }
tn-engine = { workspace = true }
tn-batch-builder = { workspace = true }
tn-batch-validator = { workspace = true }
jsonrpsee = { workspace = true }
roaring = { workspace = true }

# TODO: temporary solution until reth supports public rpc hooks
tn-faucet = { workspace = true }

opentelemetry = { version = "0.31.0", default-features = false, features = [
    "trace", "metrics",
] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = [
    "trace", "metrics",
] }
opentelemetry-otlp = { version = "0.31.0", features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-stdout = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
tracing-core = "0.1.28"
tracing-subscriber = { version = "0.3.0", default-features = false, features = [
    "registry",
    "std",
] }
tracing-opentelemetry = "0.32"

[dev-dependencies]
rand = { workspace = true }
tn-primary = { workspace = true, features = ["test-utils"] }
tn-types = { workspace = true, features = ["test-utils"] }
tn-engine = { workspace = true, features = ["test-utils"] }
tn-test-utils = { workspace = true }
tn-network-types = { workspace = true }

[lints]
workspace = true
