[package]
name = "tn-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tn-executor = { workspace = true }
tn-primary = { workspace = true }
tn-storage = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
tn-worker = { workspace = true }
tn-rpc = { workspace = true }
eyre = { workspace = true }
tn-metrics = { workspace = true }
tn-network-libp2p = { workspace = true }
tn-reth = { workspace = true }
tn-exex = { workspace = true }
state-sync = { workspace = true }
tn-engine = { workspace = true }
tn-batch-builder = { workspace = true }
tn-batch-validator = { workspace = true }
jsonrpsee = { workspace = true }
roaring = { workspace = true }
metrics = { workspace = true }
reth-metrics = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[features]
# Propagate the adiri-testnet feature to every downstream crate that has adiri-gated fork logic, so
# a `--features adiri` node build actually compiles it in. tn-node has no adiri code of its own.
adiri = [
    "tn-engine/adiri",
    "tn-executor/adiri",
    "tn-reth/adiri",
    "tn-storage/adiri",
    "tn-types/adiri",
]
# Opt back in to reth's RocksDB storage backend; tn-node has no rocksdb code of its own.
rocksdb = ["tn-reth/rocksdb"]

[dev-dependencies]
metrics-util = { workspace = true }
rand = { workspace = true }
tn-primary = { workspace = true, features = ["test-utils"] }
tn-types = { workspace = true, features = ["test-utils"] }
tn-engine = { workspace = true, features = ["test-utils"] }
tn-test-utils = { workspace = true }
tn-network-types = { workspace = true }
tempfile = { workspace = true }
tn-test-utils-committee = { workspace = true }
tn-worker = { workspace = true, features = ["test-utils"] }

[lints]
workspace = true
