[package]
name = "state-sync"
version.workspace = true
edition = "2021"
license.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
]
publish = false

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tn-storage = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
tn-primary = { workspace = true }

[lints]
workspace = true
