[package]
name = "state-sync"
version.workspace = true
edition = "2021"
license.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
]
publish = false

[dependencies]
eyre = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tn-storage = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
tn-primary = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
tn-storage = { workspace = true }
tn-test-utils-committee = { workspace = true }
tn-test-utils = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tn-types = { workspace = true }

[[test]]
name = "it"
path = "tests/it/main.rs"

[lints]
workspace = true
