[package]
name = "tn-storage"
version.workspace = true
edition = "2021"
license = "MIT or Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
tn-utils.workspace = true
tracing.workspace = true
tn-types = { workspace = true }
eyre = { workspace = true }
ouroboros = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
# For the persist async implemetation.
tokio = { workspace = true, features = [ "sync" ] }

# redb backend
redb = { version = "3.1.0", optional = false }

# mdbx backend- default
reth-libmdbx = { workspace = true, optional = true, features = [
    "return-borrowed",
    "read-tx-timeouts",
] }
page_size = { version = "0.6.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
redb = []
reth-libmdbx = ["dep:reth-libmdbx", "dep:page_size"]
default = ["reth-libmdbx"]

[lints]
workspace = true
