[package]
name = "telcoin-network-cli"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/telcoin/telcoin-network"
readme = "README.md"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Markus Osterlund <markus@telcoin.org>",
]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
const-str = "0.5.6"
fdlimit = { workspace = true }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }
tracing = { workspace = true }
tn-types = { workspace = true }
tn-node = { workspace = true }
tn-reth = { workspace = true }
tn-config = { workspace = true }
rayon = { workspace = true }
dirs-next = { workspace = true }
bs58 = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tn-types = { workspace = true, features = ["test-utils"] }
tn-reth = { workspace = true, features = ["test-utils"] }
tn-config = { workspace = true, features = ["test-utils"]}
tempfile = { workspace = true }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }
