[package]
name = "telcoin-network-cli"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/telcoin/telcoin-network"
readme = "README.md"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Markus Osterlund <markus@telcoin.org>",
]

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
eyre = { workspace = true }
const-str = { workspace = true }
fdlimit = { workspace = true }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand",
    "recovery",
] }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }

opentelemetry = { workspace = true, default-features = false, features = [
    "trace", "metrics",
] }
opentelemetry_sdk = { workspace = true, default-features = false, features = [
    "trace", "metrics",
] }
opentelemetry-otlp = { workspace = true, features = ["trace", "metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, default-features = false, features = [
    "registry",
    "std",
] }
tracing-opentelemetry = { workspace = true }

alloy = { workspace = true }
tn-types = { workspace = true }
tn-node = { workspace = true }
tn-reth = { workspace = true }
tn-config = { workspace = true }
rayon = { workspace = true }
dirs-next = { workspace = true }
bs58 = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tn-types = { workspace = true, features = ["test-utils"] }
tn-reth = { workspace = true, features = ["test-utils"] }
tn-config = { workspace = true, features = ["test-utils"]}
tempfile = { workspace = true }

[build-dependencies]
vergen = { version = "8.0.0", features = ["build", "cargo", "git", "gitcl"] }

[lints]
workspace = true
