[package]
name = "tn-test-utils-committee"
version.workspace = true
edition = "2021"
license = "Apache-2.0"
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
publish = false

[dependencies]
tn-reth = { workspace = true, features = ["test-utils"] }
tn-types = { workspace = true }
tn-config = { workspace = true }
rand = { workspace = true }
