[package]
name = "tn-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Prometheus metrics recorder and scrape endpoint for telcoin-network nodes."

[dependencies]
eyre = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
metrics-process = { workspace = true }
tn-types = { workspace = true }
tokio = { workspace = true, features = ["net", "time", "io-util", "macros"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "net",
    "time",
    "io-util",
    "macros",
] }

[lints]
workspace = true
