[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
exclude.workspace = true

[dependencies]
# utils
telcoin-network = { path = "../../bin/telcoin-network", features = [
    "test-utils",
] }
tn-test-utils = { workspace = true }
tn-node = { workspace = true }
tempfile = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
reth-chainspec = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }

# faucet
tokio = { workspace = true, features = ["time"], optional = true }
jsonrpsee = { workspace = true, optional = true }
tn-faucet = { workspace = true, optional = true }
gcloud-sdk = { version = "=0.24.6", default-features = false, features = [
    "google-cloud-kms-v1",
    "tls-webpki-roots",
], optional = true }
k256 = { version = "0.13.3", optional = true }
tn-types = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
secp256k1 = { workspace = true, features = [
    "global-context",
    "rand-std",
    "recovery",
], optional = true }

[dev-dependencies]
alloy = { workspace = true }
rand = { workspace = true }
tn-types = { workspace = true }
tn-config = { workspace = true }
jsonrpsee = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "macros",
    "time",
    "rt-multi-thread",
] }

[features]
default = []
faucet = [
    "tn-faucet",
    "tokio",
    "jsonrpsee",
    "dep:gcloud-sdk",
    "dep:k256",
    "dep:futures",
    "dep:secp256k1",
    "tn-types",
]
