[package]
name = "epoch-manager"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
exclude.workspace = true

[dependencies]

[lints]
workspace = true
