[package]
name = "narwhal-primary-metrics"
version.workspace = true
authors = [
    "Grant Kee <grant@telcoin.org>",
    "Steven Stanfield <steve@telcoin.org>",
    "Mysten Labs <build@mystenlabs.com>",
]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
prometheus = { workspace = true }
narwhal-network = { workspace = true }
tracing = { workspace = true }
consensus-metrics = { workspace = true }
